--- a/business-card/card-design.html
+++ b/business-card/card-design.html
@@ -232,7 +232,7 @@
                         <div>ユーズAI合同会社</div>
                         <div>〒179-0081</div>
                         <div>東京都練馬区早宮3-31-9</div>
-                        <div>M: 090-2527-5002</div>
+                        <div>090-2527-5002</div>
                         <div>info.useai.llc@gmail.com</div>
                     </div>
                 </div>
