Improve service offering copy

--- a/services.html
+++ b/services.html
@@ -455,29 +455,49 @@
                 <div class="service-section">
                     <h3 class="section-title">サービス内容</h3>
                     <p>
-                        開発チームの生産性向上とプロダクト品質の向上をサポートします。<br>
-                        技術的なマネジメントからチームビルディングまで、包括的な支援を提供いたします。
+                        AI/ソフトウェア開発組織の立ち上げからスケールまでを伴走支援します。<br>
+                        CTO経験者がプロダクト戦略と組織運営の両面をリードし、短期間で成果が出るチームをつくります。
                     </p>
                 </div>
 
                 <div class="service-section">
                     <h3 class="section-title">提供内容</h3>
                     <ul class="service-list">
-                        <li>週平均5時間以上のミーティング（定例MTG、1on1、技術相談など）</li>
-                        <li>開発・コラボレーションツールの利用（GitHub Enterprise / Slack / Notion）</li>
-                        <li>アーキテクチャ設計およびコードレビューのサポート</li>
-                        <li>エンジニアの人事評価に関するアドバイス</li>
+                        <li>週平均5時間以上のミーティング（定例MTG、1on1、技術相談、経営陣ブリーフィングを含む）</li>
+                        <li>開発プロセス設計（スクラム/カンバン運用、リリース基準、インシデント対応フロー）</li>
+                        <li>アーキテクチャ設計およびコードレビュー、品質ガイドライン作成</li>
+                        <li>メンバーの育成計画策定と評価基準の言語化、採用計画への助言</li>
                     </ul>
                 </div>
 
                 <div class="service-section">
                     <h3 class="section-title">こんな課題を解決します</h3>
                     <ul class="service-list">
-                        <li>開発チームのマネジメントに課題を感じている</li>
-                        <li>技術的な意思決定をサポートしてほしい</li>
-                        <li>コードの品質やアーキテクチャを改善したい</li>
-                        <li>エンジニアの評価基準を明確にしたい</li>
-                        <li>チームの生産性を向上させたい</li>
+                        <li>「まず何から整えるべきか」がわからない開発組織を短期間で立ち上げたい</li>
+                        <li>技術選定やアーキテクチャに自信がなく、意思決定を伴走してほしい</li>
+                        <li>レビュー体制が属人化し、品質やリリース速度にムラがある</li>
+                        <li>評価制度や育成の軸が曖昧で、メンバーの成長と納得感を高めたい</li>
+                        <li>経営サイドへ技術リスク・投資効果を整理し、対話の材料を揃えたい</li>
+                    </ul>
+                </div>
+
+                <div class="service-section">
+                    <h3 class="section-title">支援の進め方</h3>
+                    <ul class="service-list">
+                        <li>初月：現状診断（プロセス・コードベース・メンバー構成をレビュー）と優先課題の整理</li>
+                        <li>1〜2ヶ月目：開発プロセスとガイドラインを設計し、週次で実装・レビューを伴走</li>
+                        <li>3ヶ月目以降：定常運用に移行し、KPI/OKRのモニタリングと改善サイクルを設計</li>
+                        <li>適宜：経営層/プロダクトオーナーへの報告資料を作成し、意思決定をサポート</li>
+                    </ul>
+                </div>
+
+                <div class="service-section">
+                    <h3 class="section-title">成果物・アウトプット例</h3>
+                    <ul class="service-list">
+                        <li>開発プロセス・レビュー体制の設計書、リリースチェックリスト</li>
+                        <li>アーキテクチャ提案・リファクタリング計画、品質ガイドライン</li>
+                        <li>人材育成プラン、評価項目サンプル、採用要件定義</li>
+                        <li>経営層向けレポート（リスク/ロードマップ/投資対効果の整理）</li>
                     </ul>
                 </div>
 
