Fix typos on services page

--- a/services.html
+++ b/services.html
@@ -588,7 +588,7 @@
                         <li>作りたいプロダクトとメンバーがいる状態、または既存運用課題の洗い出しから開始</li>
                         <li>Google Cloud / Google Workspace を基盤に社内DXを設計し、インフラは原則GCPで構築</li>
                         <li>AIツール（Claude Pro または ChatGPT Plus）を1つ導入し、Slack・Notion・GitHubと連携</li>
-                        <li>プロジェクト初日から AIツール・Slack・Notion・GitHub を整備し、開発コラボレーションを即稼働</li>
+                        <li>プロジェクト初日からAIツール・Slack・Notion・GitHub を整備し、開発コラボレーションを即稼働</li>
                         <li>AIツールと開発ツールを組み合わせ、安定した開発と情報共有を仕組み化</li>
                     </ul>
                     <div class="pricing-includes" style="margin-top: 12px;">
@@ -653,7 +653,7 @@
                                     <li>Slack Pro：月額8.75ドル（約1,300円）/名（月払い）</li>
                                     <li>Notion Plus：月額10ドル（約1,500円）/名（月払い）</li>
                                 </ul>
-                                <div class="included-value" style="margin-top: 8px;">➡ さらに開発ツール費用（約4,200円/名）も含まれているため、さらにお得です</div>
+                                <div class="included-value" style="margin-top: 8px;">➡ 開発ツール費用（約4,200円/名）も含まれているため、お得です</div>
                             </li>
                         </ul>
                     </div>
@@ -668,7 +668,7 @@
                 <div class="service-section">
                     <h3 class="section-title">契約終了後について</h3>
                     <p style="margin-bottom: 15px;">
-                        契約終了時には、ご利用いただいていたツールの内容をスムーズに引き継ぎいたします。
+                        契約終了時には、ご利用いただいていたツールの内容をスムーズに引き継ぎます。
                     </p>
                     <ul class="service-list">
                         <li><strong>GitHub：</strong>リポジトリのオーナー権限を移譲、またはエクスポートして御社のアカウントへ移行</li>
